fixed some formattion, now it also looks awsome on mobile :D

--- a/www/booze/style/style.scss
+++ b/www/booze/style/style.scss
@@ -1,27 +1,32 @@
-#background {
-  background-size: cover;
-  background: url("../img/wood.jpg") center;
-  width: 100%;
-  height: 100%;
-
-  > div {
-    height: 100%;
+body{
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  #background {
+    background-size: cover;
+    background: url("../img/wood.jpg") center;
     width: 100%;
+    height: 100%;
 
-    svg {
-      left: 30%;
-      width: 40%;
-      position: absolute;
+    > div {
+      height: 100%;
+      width: 100%;
 
-      #rect4384-5 {
-        fill: green;
-        display:inline;
-        fill-opacity:1;
-        transition-duration: 2s;
+      svg {
+        width: 100%;
+        height: 100%;
+        position: relative;
+
+        #rect4384-5 {
+          fill: green;
+          display:inline;
+          fill-opacity:1;
+          transition-duration: 2s;
+        }
+
       }
 
     }
 
   }
-
 }
